Edit Content Font Size

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                     </div>
                     
                     <div class="col-md-9" align="center">
-                        <h3> Date Of Birth : 28 November 1997</h3>
-                        <h3> Occupation : Information Systems Student - BINUS University</h3>
+                        <h4> Date Of Birth : 28 November 1997</h4>
+                        <h4> Occupation : Information Systems Student - BINUS University</h4>
+                        <h4> Email : <a href="mailto:abiyyu.fajri@binus.ac.id"> abiyyu.fajri@binus.ac.id</a> 
+                        </h4>
                     </div>
                 </div>
 
